--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">Weacher_app</string>
+    <!--  Название приложения  -->
+    <string name="app_name">Weather app</string>
+
 </resources>
